# promptguard

./: .gitignore  .gitmodules  AGENTS.md  ANALYSIS_FILES_SUMMARY.md  ARANGO_IMPORT_SUMMARY.md  ARANGO_INTEGRATION_SUMMARY.md  BASELINE_ARANGO_USAGE.md  BASELINE_COMPARISON_ANALYSIS.md  BASELINE_COMPARISON_EXPERIMENT.md  BASELINE_COMPARISON_FIX_SUMMARY.md  BASELINE_COMPLIANCE_STATUS.md  BASELINE_FAILURE_ANALYSIS.md  BASELINE_FIX_REPORT.md  BASELINE_FRONTIER_2025_ANALYSIS.md  BASELINE_OBSERVER_FRAMING_COMPATIBILITY.md  BASELINE_VISUALIZATION_SUMMARY.md  BLIND_SPOTS_SUMMARY.md  BYZANTINE_DATASET_SUMMARY.md  CALIBRATION_COMPLETION_CHECKLIST.md  CHOICE_EXPERIMENT_ANALYSIS.md  CHOICE_EXPERIMENT_DETAILED_ANALYSIS.md  CHOICE_EXPERIMENT_EXAMPLES.md  CHOICE_EXPERIMENT_PROTOCOL.md  CHOICE_EXPERIMENT_SUMMARY.md  CIRCUIT_BREAKER_TLA_SPECIFICATION.md  CLAUDE.md  CLAUDE_improved.md  CLAUDE_relational.md  COHERENCE_EVALUATION_ANALYSIS.md  CONFIG_REFACTOR_SUMMARY.md  CONSTITUTION.md  CROSS_MODEL_EXECUTIVE_SUMMARY.md  CROSS_MODEL_EXPANSION_ANALYSIS.md  DATASET_CORRECTION_PLAN.md  DATASET_CORRECTION_SUMMARY.md  DATASET_MISLABELING_FINAL_REPORT.md  DATASET_MISLABELING_VERIFICATION_REPORT.md  DILUTION_TESTING_SUMMARY.md  DILUTION_TEST_ANALYSIS.md  DIVERSITY_CALIBRATION_ANALYSIS.md  (+350 more)
.claude/: integrity_audit_trigger.py
.serena/: project.yml
config/: dynamic_free_models.py  free_models.json  model_configs.json  model_registry_schema.json  model_registry_template.json  openrouter_frontier_models.json  recommended_models.json  target_models.yaml
datasets/: ACQUISITION_SUMMARY.md  BORDERLINE.md  (+31 more)
(+184 files in other folders)
