[project]
name = "promptguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require API access (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
